--- a/core-spring-security/src/main/resources/templates/layout/top.html
+++ b/core-spring-security/src/main/resources/templates/layout/top.html
@@ -6,6 +6,7 @@
             <a class="text-light" href="#"><h4>CODE VIEW</h4></a>
             <ul class="nav justify-content-end">
                 <li class="nav-item" ><a class="nav-link text-light" href="/">HOME</a></li>
+                <li class="nav-item" ><a class="nav-link text-light" th:href="@{/login}"> LOGIN </a></li>
                 <li class="nav-item" ><a class="nav-link text-light" th:href="@{/logout}"> LOGOUT </a></li>
             </ul>
         </div>
