--- a/core-spring-security/src/main/resources/templates/user/login/login.html
+++ b/core-spring-security/src/main/resources/templates/user/login/login.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="layout/header::userHead"></head>
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="">
+<head th:replace="layout/header::userHead"><title></title></head>
 <body>
 <div th:replace="layout/top::header"></div>
-<div class="container">
-    <div class="text-center login-form">
-        <div class="col-sm-5">
+<div class="container text-center">
+    <div class="login-form d-flex justify-content-center">
+        <div class="col-sm-5" style="margin-top: 30px;">
             <div class="panel">
                 <p>아이디와 비밀번호를 입력해주세요</p>
             </div>
+            <div th:if="${param.error}" class="form-group">
+                <span th:text="${exception}" class="alert alert-danger">잘못된 아이디나 암호입니다</span>
+            </div>
             <form th:action="@{/login_proc}" class="form-signin" method="post">
-                <!--            <form name="frm" id="frm" action="#" method="post" onsubmit="return false" class="form-signin">-->
+                <input type="hidden" th:value="secret" name="secret_key" />
                 <div class="form-group">
-                    <input type="text" class="form-control" name="username" placeholder="아이디" required="required"
-                           autofocus="autofocus">
+                    <label>
+                        <input type="text" class="form-control" name="username" placeholder="아이디" required="required" autofocus="autofocus">
+                    </label>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="비밀번호" required="required">
+                    <label>
+                        <input type="password" class="form-control" name="password" placeholder="비밀번호" required="required">
+                    </label>
                 </div>
-
-                <div class="form-group">
-                    Remember Me<input type="checkbox" name="remember-me" />
-                </div>
-                <!--<div th:if="${param.error}" class="form-group">
-                    <span th:text="${session[SPRING_SECURITY_LAST_EXCEPTION]}"
-                          class="alert alert-danger">잘못된 아이디나 암호입니다</span>
-                </div>-->
+                <!--                <button type="button" onclick="formLogin()" id="formbtn" class="btn btn-lg btn-primary btn-block">로그인</button>-->
                 <button type="submit" class="btn btn-lg btn-primary btn-block">로그인</button>
-                <!--                <button type="submit" onclick="formLogin()" id="formbtn" class="btn btn-lg btn-primary btn-block">로그인</button>-->
             </form>
         </div>
     </div>
